[ACPI] save/restore ELCR on suspend/resume (David Shaohua Li) http://bugzilla.kernel.org/show_bug.cgi?id=2643